o logging changes (mostly info -> debug), some fixes for showing    exception traces  o minor formatting changes (so that really long lines fit into 79    cols)